media/playbookGeneration/style.css
a:link {
  text-decoration: none;
}

a:visited {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

a:active {
  text-decoration: none;
}

.backAnchor {
  cursor: pointer;
}

.playbookGeneration {
  right: 0px;
  bottom: 0px;
}

.pageNumber {
  text-align: left;
  margin: 0.2em;
  color: var(--vscode-descriptionForeground);
}

.playbookGeneration h2 {
  color: var(--vscode-foreground);
  text-align: left;
  margin-block-end: 0.2em;
  font-weight: 400;
}

.playbookGeneration h4 {
  color: var(--vscode-foreground);
  margin-block-end: 0.2em;
  font-weight: bold;
}

.examplesContainer h4 {
  color: var(--vscode-descriptionForeground);
  font-weight: 400;
}

.mainContainer {
  position: relative;
}

.editArea {
  position: relative;
  border-style: none;
}

.editArea>vscode-text-area {
  width: 100%;
  border-style: none;
}

.editArea>button {
  float: right;
}

.inputSection {
  margin-top: 2em;
}

.inputArea {
  margin-top: 1em;
  width: 100%
}

.inputArea>vscode-text-field {
  width: 100%
}

.bigIconButtonContainer {
  position: relative;
  margin-top: 1em;
  margin-bottom: 0.5em;
  width: 100%;
  height: 48px;
  display: block;
}

.biggerButton {
  padding: 3px;
}

/* override the default .codicon class */
.codicon[class*='codicon-'] {
  font: normal normal normal 16px/1 codicon;
  display: inline-block;
  text-decoration: none;
  text-rendering: auto;
  text-align: center;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  position: relative;
  font-size: 24px;
  width: calc(var(--design-unit) * 6px);
  height: calc(var(--design-unit) * 6px);
}

.spinnerContainer {
  background-color: var(--vscode-editor-background, #ffffff80);
  border-style: solid;
  border-radius: 12px;
  border-width: thin;
  border-color: var(--vscode-widget-border);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: none;
  text-align: center;
  padding: 12px;
  margin: auto;
  z-index: 100;
  opacity: 0.7;
}

.codicon-spinner {
  font: normal normal normal 16px/1 codicon;
  display: inline-block;
  text-decoration: none;
  text-rendering: auto;
  text-align: center;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  position: relative;
  font-size: 48px;
  width: calc(var(--design-unit) * 12px);
  height: calc(var(--design-unit) * 12px);
}

.resetFeedbackContainer {
  margin: 0.25em;
  position: relative;
  width: 100%;
  height: 36px;
  display: none;
}

.resetContainer {
  position: absolute;
  left: 0px;
  bottom: 5px;
  display: flow;
}

.stickyFeedbackContainer {
  position: sticky;
  bottom: 0px;
}

.feedbackContainer {
  position: absolute;
  right: 0px;
  bottom: 0px;
  display: flex;
}

.generatePlaybookContainer {
  margin-top: 2em;
  display: none;
}

.openEditorContainer {
  margin-top: 3em;
  display: none;
}

.promptContainer {
  margin: 1em;
  display: none;
  color: var(--vscode-descriptionForeground);
}

.examplesContainer {
  margin-top: 1em;
}

.exampleTextContainer {
  margin: 0.5em;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  border-style: solid;
  border-width: thin;
  border-radius: 8px;
  width: fit-content;
  max-width: 90%;
  color: var(--vscode-descriptionForeground);
}

.continueButtonContainer {
  margin-top: 1em;
  display: none;
}

.buttonBorder {
  border-style: solid;
  border-width: thin;
}

.textFieldFullWidth {
  width: 100%;
}

.firstMessage {
  display: block;
}

.secondMessage {
  display: none;
}

.thirdMessage {
  display: none;
}

.iconButton {
  width: 36px;
  height: 36px;
  margin: 0.2em;
  background: var(--button-icon-background);
  border-radius: var(--button-icon-corner-radius);
  color: var(--foreground);
}

.iconButtonSelected {
  width: 36px;
  height: 36px;
  margin: 0.2em;
  background: var(--button-primary-background);
  color: var(--button-primary-foreground);
}

.outlineContainer {
  display: none;
  width: 100%;
  height: 12em;
  color: var(--input-foreground);
  background: var(--input-background);
  overflow-x: auto;
  overflow-y: auto;
  border-style: solid;
  border-width: thin;
  border-color: var(--vscode-widget-border);
  resize: vertical;
}

.outlineContainer ol {
  margin-block-start: 0.3em;
  margin-block-end: 0.3em;
  margin-inline-start: 0.3em;
  margin-inline-end: 0.3em;
  padding-inline-start: 20px;
}

.outlineContainer ol:focus {
  outline-style: solid;
  outline-width: thin;
  outline-color: var(--vscode-focusBorder);
}

.formattedPlaybook {
  display: none;
  width: 100%;
  height: 25em;
  border-style: solid;
  border-width: thin;
  border-color: var(--vscode-widget-border);
  overflow-x: auto;
  overflow-y: auto;
  resize: vertical;
}

.formattedPlaybook code {
  background-color: var(--input-background);
}

.formattedPlaybook pre {
  margin: 0em;
  background-color: var(--input-background);
}

